Change z-indexes that were causing overlay issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ nav h3,
     width: 30%;
     display: flex;
     justify-content: space-between;
+    z-index: 2;
 }
 
 .nav-links li {
@@ -81,6 +82,7 @@ nav h3,
     border-radius: 50%;
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
+    z-index: 3;
 }
 
 #back-to-top-btn:hover, #back-to-top-btn:focus {
@@ -105,7 +107,7 @@ nav h3,
 #fixed-background {
     position: relative;
     width: 100%;
-    z-index: 1000 !important;
+    z-index: 1;
     height: 100vh;
     padding: 5rem 0;
 }
@@ -117,7 +119,7 @@ nav h3,
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -999 !important;
+    z-index: -1;
 }
 
 #fixed {
@@ -296,7 +298,7 @@ nav h3,
 
 @media screen and (max-width: 992px) {
     body {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     .nav-links {
